[flake8]
max-line-length = 110

[metadata]
project_urls = Homepage = https://github.com/lineaje-labs-gos/legrandin-pycryptodome
	Repository = https://github.com/lineaje-labs-gos/legrandin-pycryptodome
	Tracker = https://github.com/lineaje-labs-gos/legrandin-pycryptodome/issues
version = 3.18.0+lineaje.1
maintainer = Lineaje DepFixer
maintainer_email = 221268890+Lineaje-DepFixer@users.noreply.github.com
url = https://github.com/lineaje-labs-gos/legrandin-pycryptodome

[bdist_wheel]
py-limited-api = cp35

[build_sphinx]
source-dir = Doc

